chore: initial commit with secure config

--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@langchain/core": "^0.3.56",
     "@langchain/openai": "^0.5.10",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@types/mongoose": "^5.11.96",
+    "dotenv": "^16.5.0",
     "langchain": "^0.3.26",
     "mongoose": "^8.15.0",
     "reflect-metadata": "^0.2.2",
